fix: Change pink color for a slightly better contrast ratio

--- a/scss/speeddial.scss
+++ b/scss/speeddial.scss
@@ -57,7 +57,7 @@ $option-font-color: rgba(#000, .87);
 
 .speed-dial--pink {
     .speed-dial__btn {
-        background: rgb(255, 64, 129);
+        background: #E91E63;
         color: rgb(255, 255, 255);
     }
 }
